--- a/WhoReapedWhat.csproj
+++ b/WhoReapedWhat.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include=".github\workflows\build-release.yml" />
+    <None Include=".github\workflows\docker-build.yml" />
+  </ItemGroup>
+
 </Project>
