--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -66,13 +66,7 @@ jobs:
       continue-on-error: true
 
     - name: Publish
-      run: |
-        dotnet publish -c Release \
-          -r ${{ matrix.runtime }} \
-          --self-contained true \
-          -p:PublishSingleFile=true \
-          -p:PublishTrimmed=true \
-          -o ./publish/${{ matrix.os }}-${{ matrix.arch }}
+      run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -o ./publish/${{ matrix.os }}-${{ matrix.arch }}
 
     - name: Create archive (Windows)
       if: matrix.os == 'windows'
