--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -136,7 +136,9 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
@@ -168,7 +170,8 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: build-native
-    
+    permissions:
+      contents: write    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
