--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -154,7 +154,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        image-ref: synth14/whoreapedwhat:latest
         format: 'sarif'
         output: 'trivy-results.sarif'
 
