--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
 
 env:
@@ -141,7 +141,31 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-
+  push-dockerhub:
+    name: Push to Docker Hub
+    runs-on: ubuntu-latest
+    needs: build-docker
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+  
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
+      - name: Pull image from GHCR
+        run: |
+          docker pull ghcr.io/${{ github.repository }}:latest
+  
+      - name: Tag image for Docker Hub
+        run: |
+          docker tag ghcr.io/${{ github.repository }}:latest docker.io/${{ secrets.DOCKERHUB_USERNAME }}/whoreapedwhat:latest
+  
+      - name: Push image to Docker Hub
+        run: |
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/whoreapedwhat:latest
   # Job 3: Security scan (dépend de build-docker)
   security-scan:
     name: Security Scan
