--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -141,31 +141,54 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-  push-dockerhub:
-    name: Push to Docker Hub
+
+  build-and-push:
     runs-on: ubuntu-latest
-    needs: build-docker
+    permissions:
+      contents: read
+      security-events: write  
+      packages: write
+      actions: read
+      pull-requests: write
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-  
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-  
-      - name: Pull image from GHCR
-        run: |
-          docker pull ghcr.io/${{ github.repository }}:latest
-  
-      - name: Tag image for Docker Hub
-        run: |
-          docker tag ghcr.io/${{ github.repository }}:latest docker.io/${{ secrets.DOCKERHUB_USERNAME }}/whoreapedwhat:latest
-  
-      - name: Push image to Docker Hub
-        run: |
-          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/whoreapedwhat:latest
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: synth14/whoreapedwhat
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=raw,value=latest,enable={{is_default_branch}}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./docker/Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
   # Job 3: Security scan (dépend de build-docker)
   security-scan:
     name: Security Scan
