--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,147 +1,3 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-  workflow_dispatch:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: synth14/whoreapedwhat
-
-jobs:
-  # Job 1: Build native executables
-  build-native:
-    name: Build ${{ matrix.os }} ${{ matrix.arch }}
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      matrix:
-        include:
-          - os: windows
-            arch: x64
-            runner: windows-latest
-            runtime: win-x64
-            extension: .exe
-          - os: windows
-            arch: arm64
-            runner: windows-latest
-            runtime: win-arm64
-            extension: .exe
-          - os: linux
-            arch: x64
-            runner: ubuntu-latest
-            runtime: linux-x64
-            extension: ''
-          - os: linux
-            arch: arm64
-            runner: ubuntu-latest
-            runtime: linux-arm64
-            extension: ''
-          - os: macos
-            arch: x64
-            runner: macos-latest
-            runtime: osx-x64
-            extension: ''
-          - os: macos
-            arch: arm64
-            runner: macos-latest
-            runtime: osx-arm64
-            extension: ''
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
-
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build -c Release --no-restore
-
-    - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal
-      continue-on-error: true
-
-    - name: Publish
-      run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -o ./publish/${{ matrix.os }}-${{ matrix.arch }}
-
-    - name: Create archive (Windows)
-      if: matrix.os == 'windows'
-      run: |
-        cd publish/${{ matrix.os }}-${{ matrix.arch }}
-        7z a ../../WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.zip *
-
-    - name: Create archive (Unix)
-      if: matrix.os != 'windows'
-      run: |
-        cd publish/${{ matrix.os }}-${{ matrix.arch }}
-        chmod +x WhoReapedWhat
-        tar -czf ../../WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.tar.gz *
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}
-        path: |
-          WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.zip
-          WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
-        retention-days: 30
-
-  # Job 2: Build Docker images (parallèle avec build-native)
-  build-docker:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: synth14/whoreapedwhat
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=raw,value=latest,enable={{is_default_branch}}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: |
-          ghcr.io/synth14/whoreapedwhat:latest
-          ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
@@ -151,6 +7,10 @@ jobs:
       actions: read
       pull-requests: write
 
+    env:
+      GHCR_IMAGE: ghcr.io/synth14/whoreapedwhat
+      DOCKERHUB_IMAGE: synth14/whoreapedwhat
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -158,11 +18,19 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Log in to GHCR
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: docker.io
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -170,7 +38,9 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: synth14/whoreapedwhat
+        images: |
+          ${{ env.GHCR_IMAGE }}
+          ${{ env.DOCKERHUB_IMAGE }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -178,7 +48,8 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
           type=raw,value=latest,enable={{is_default_branch}}
-    - name: Build and push Docker image
+
+    - name: Build and push Docker images
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -189,88 +60,3 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-  # Job 3: Security scan (dépend de build-docker)
-  security-scan:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: build-docker
-    permissions:
-      security-events: write
-
-    steps:
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: synth14/whoreapedwhat:latest
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v3
-      if: always() && hashFiles('trivy-results.sarif') != ''
-      with:
-        sarif_file: 'trivy-results.sarif'
-
-  # Job 4: Create release (dépend de build-native)
-  release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    needs: build-native
-    permissions:
-      contents: write    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: ./artifacts
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: ./artifacts/**/*
-        tag_name: release-${{ github.run_id }}
-        name: whoreapedwhat Build ${{ github.run_number }}
-        body: |
-          ## Automated Build ${{ github.run_number }}
-          
-          **Commit**: ${{ github.sha }}
-          **Branch**: ${{ github.ref_name }}
-          
-          ### Downloads
-          - **Windows x64**: WhoReapedWhat-windows-x64.zip
-          - **Windows ARM64**: WhoReapedWhat-windows-arm64.zip  
-          - **Linux x64**: WhoReapedWhat-linux-x64.tar.gz
-          - **Linux ARM64**: WhoReapedWhat-linux-arm64.tar.gz
-          - **macOS x64**: WhoReapedWhat-macos-x64.tar.gz
-          - **macOS ARM64**: WhoReapedWhat-macos-arm64.tar.gz
-          
-          ### Docker Images
-          ```bash
-          docker pull ghcr.io/synth14\whoreapedwhat:latest
-          ```
-        draft: false
-        prerelease: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # Job 5: Update Docker Hub
-  update-dockerhub:
-    name: Update Docker Hub
-    runs-on: ubuntu-latest
-    needs: build-docker
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Update Docker Hub Description
-      uses: peter-evans/dockerhub-description@v4
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        repository: ${{ github.repository }}
-        readme-filepath: ./README.md
-      continue-on-error: true
