--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,28 +3,115 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master
+      - main
+    tags:
+      - 'v*'
   pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
-permissions:
-  contents: read
-  packages: write
-  security-events: write
-  actions: read
-  pull-requests: write
+env:
+  REGISTRY: docker.io
+  IMAGE_NAME: synth14/whoreapedwhat
 
 jobs:
-
-  build-and-push:
-    runs-on: ubuntu-latest
+  # Job 1: Build native executables (inchangé, ton code original)
+  build-native:
+    name: Build ${{ matrix.os }} ${{ matrix.arch }}
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        include:
+          - os: windows
+            arch: x64
+            runner: windows-latest
+            runtime: win-x64
+            extension: .exe
+          - os: windows
+            arch: arm64
+            runner: windows-latest
+            runtime: win-arm64
+            extension: .exe
+          - os: linux
+            arch: x64
+            runner: ubuntu-latest
+            runtime: linux-x64
+            extension: ''
+          - os: linux
+            arch: arm64
+            runner: ubuntu-latest
+            runtime: linux-arm64
+            extension: ''
+          - os: macos
+            arch: x64
+            runner: macos-latest
+            runtime: osx-x64
+            extension: ''
+          - os: macos
+            arch: arm64
+            runner: macos-latest
+            runtime: osx-arm64
+            extension: ''
     steps:
-      - name: Checkout repo
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build -c Release --no-restore
+
+      - name: Test
+        run: dotnet test -c Release --no-build --verbosity normal
+        continue-on-error: true
+
+      - name: Publish
+        run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -o ./publish/${{ matrix.os }}-${{ matrix.arch }}
+
+      - name: Create archive (Windows)
+        if: matrix.os == 'windows'
+        run: |
+          cd publish/${{ matrix.os }}-${{ matrix.arch }}
+          7z a ../../WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.zip *
+
+      - name: Create archive (Unix)
+        if: matrix.os != 'windows'
+        run: |
+          cd publish/${{ matrix.os }}-${{ matrix.arch }}
+          chmod +x WhoReapedWhat
+          tar -czf ../../WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.tar.gz *
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}
+          path: |
+            WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.zip
+            WhoReapedWhat-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          retention-days: 30
+
+  # Job 2: Build Docker Images and Push to Docker Hub
+  build-docker:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -35,7 +122,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: synth14/whoreapedwhat
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -50,44 +137,87 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  build-release:
-    runs-on: windows-latest
-    needs: build-and-push  # optionnel, si tu veux que ça attende le docker push
+  # Job 3: Security Scan with Trivy (dépend de build-docker)
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    needs: build-docker
+    permissions:
+      security-events: write
     steps:
-      - name: Checkout repo
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && hashFiles('trivy-results.sarif') != ''
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+  # Job 4: Create release (inchangé, dépend de build-native)
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: build-native
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET (ou ton environnement de build)
-        uses: actions/setup-dotnet@v3
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
         with:
-          dotnet-version: '7.x'  # adapte selon ton besoin
+          path: ./artifacts
 
-      - name: Build project
-        run: dotnet publish -c Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:PublishTrimmed=true -o ./output
-
-      - name: Upload release artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: whoreapedwhat-win64
-          path: ./output/whoreapedwhat.exe
-
-      - name: Create GitHub Release
-        id: create_release
+      - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
+          files: ./artifacts/**/*
+          tag_name: ${{ github.ref_name }}  # Utilise le tag ou branche du push (ex: v1.0.0 ou main)
+          name: WhoReapedWhat Build ${{ github.run_number }}
+          body: |
+            ## Automated Build ${{ github.run_number }}
+            **Commit**: ${{ github.sha }}
+            **Branch**: ${{ github.ref_name }}
+
+            ### Downloads
+            - **Windows x64**: WhoReapedWhat-windows-x64.zip
+            - **Windows ARM64**: WhoReapedWhat-windows-arm64.zip
+            - **Linux x64**: WhoReapedWhat-linux-x64.tar.gz
+            - **Linux ARM64**: WhoReapedWhat-linux-arm64.tar.gz
+            - **macOS x64**: WhoReapedWhat-macos-x64.tar.gz
+            - **macOS ARM64**: WhoReapedWhat-macos-arm64.tar.gz
+
+            ### Docker Images
+            ```bash
+            docker pull docker.io/synth14/whoreapedwhat:latest
+            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload release asset
-        uses: softprops/action-gh-release@v1
+  # Job 5: Update Docker Hub description (dépend de build-docker)
+  update-dockerhub:
+    name: Update Docker Hub Description
+    runs-on: ubuntu-latest
+    needs: build-docker
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Update Docker Hub Description
+        uses: peter-evans/dockerhub-description@v4
         with:
-          files: ./output/whoreapedwhat.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: synth14/whoreapedwhat
+          readme-filepath: ./README.md
+        continue-on-error: true
