--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -134,7 +134,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: synth14/whoreapedwhat:latest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -156,6 +156,8 @@ jobs:
       - name: Upload Trivy scan results
         uses: github/codeql-action/upload-sarif@v3
         if: always() && hashFiles('trivy-results.sarif') != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           sarif_file: 'trivy-results.sarif'
 
@@ -163,6 +165,8 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: build-native
+    env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -196,7 +200,7 @@ jobs:
             docker pull docker.io/synth14/whoreapedwhat:latest
             ```
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
   update-dockerhub:
     name: Update Docker Hub Description
