--- a/WhoReapedWhat.csproj
+++ b/WhoReapedWhat.csproj
@@ -7,6 +7,7 @@
 	  <Nullable>enable</Nullable>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
